--- a/home.css
+++ b/home.css
@@ -591,7 +591,7 @@ footer .credit a:hover {
   }
 
   .logo {
-    height: 140px;
+    height: 150px;
     margin: 0;
     transform: translateY(70px); /* adjust value as needed */
   }
@@ -600,6 +600,7 @@ footer .credit a:hover {
     flex-wrap: wrap;
     gap: 15px;
     justify-content: flex-end;
+    margin-right: -15px;
   }
 
   .contact-button {
