--- a/aboutme.css
+++ b/aboutme.css
@@ -61,10 +61,10 @@ header.transparent {
 
 
 .logo {
-  height: 170px;
+  height: 160px;
   object-fit: contain;
   margin-top: 100px;
-  margin-left: -10px;
+  transform: translateX(-85px);
 }
 
 /* NAVIGATION */
