--- a/home.css
+++ b/home.css
@@ -251,8 +251,9 @@ h3 {
 }
 
 .container.image-questions-grid2 {
-  margin-left: 0; /* Adjust this to 0 to ensure it’s centered */
+  margin: 0 auto;
 }
+
 
 .image-card2 {
   background-color: white;
@@ -264,8 +265,9 @@ h3 {
   font-family: 'Cal Sans', sans-serif;
   font-size: 1.1rem; /* Make text slightly larger */
   width: 350px;
-  margin-left: -100px;
+  margin: 0 auto;
 }
+
 
 .image-card2:hover {
   transform: translateY(-5px);
@@ -278,7 +280,7 @@ h3 {
 }
 
 .container.image-questions-grid2 {
-  transform: translateX(-10px);
+  margin-left: 160px; /* Adjust this value as needed */
 }
 
 
